deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: covidtracker
  namespace: covidtracker
  labels:
    app: covidtracker
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: covidtracker
  template:
    metadata:
      labels:
        app: covidtracker
    spec:
      containers:
      - name: covidtracker
        image: marushovacr.azurecr.io/covidtracker-prod:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
      imagePullSecrets:
      - name: regcred
