ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress
  namespace: covidtracker
  labels:
    app: covidtracker
spec:
  selector:
    app: covidtracker
  ports:
    - protocol: TCP
      name: tcp-80
      port: 80
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: covidtracker
spec:
  tls: 
    - hosts:
      - mgcovtracker.com
      secretName: aks-ingress-tls
  ingressClassName: azure-application-gateway
  rules:
  - host: mgcovtracker.com
  - http:
      paths:
      - path: /
        backend:
          service: 
            name: ingress
            port:
              number: 80
        pathType: Exact
